--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         body { font-family: sans-serif; margin: 20px; text-align: center; }
         #controls { margin-bottom: 15px; }
-        #controls input { margin: 5px; padding: 6px; width: 250px;}
+        #controls input { margin: 5px; padding: 6px; width: 250px; }
         #tree-container { display: inline-block; border: 1px solid #ccc; margin-top: 20px; }
         .node rect { fill: #fff; stroke: #000; stroke-width: 2px; cursor: pointer; }
         .node text { font-size: 14px; font-weight: bold; text-anchor: middle; }
@@ -18,10 +18,10 @@
     </style>
 </head>
 <body>
-    <h1>वंशावली(PPTX)</h1>
+    <h1>वंशावली (PPTX)</h1>
 
     <div id="controls">
-        <input type="text" id="rootName" placeholder="वंशका मूल व्यक्ति(यदि तोकिएको छैन भने)" />
+        <input type="text" id="rootName" placeholder="वंशका मूल व्यक्ति (यदि तोकिएको छैन भने)" />
         <button onclick="setRoot()">Set</button><br/>
         <input type="text" id="parentName" placeholder="बुबाको नाम" />
         <input type="text" id="childName" placeholder="छोराछोरीको नाम" />
@@ -33,6 +33,13 @@
     <div id="tree-container"></div>
 
     <script>
+        function measureTextWidth(text, font = "14px sans-serif") {
+            const canvas = measureTextWidth.canvas || (measureTextWidth.canvas = document.createElement("canvas"));
+            const context = canvas.getContext("2d");
+            context.font = font;
+            return context.measureText(text).width;
+        }
+
         let familyTree = null;
 
         function findNodeByName(node, name) {
@@ -85,13 +92,23 @@
             container.innerHTML = "";
             if (!familyTree) return;
 
-            const nodeWidth = 120;
-            const nodeHeight = 40;
-            const horizontalSpacing = 200;
-            const verticalSpacing = 100;
+            const horizontalSpacing = 120;
+            const verticalSpacing = 70;
 
             const root = d3.hierarchy(familyTree);
-            const treeLayout = d3.tree().nodeSize([horizontalSpacing, verticalSpacing]);
+            root.each(d => {
+                d.data.boxWidth = measureTextWidth(d.data.name, "14px sans-serif") + 20;
+                d.data.boxHeight = 40;
+            });
+
+            const treeLayout = d3.tree()
+                .nodeSize([horizontalSpacing, verticalSpacing])
+                .separation((a, b) => {
+                    const aHalf = a.data.boxWidth / 2;
+                    const bHalf = b.data.boxWidth / 2;
+                    return (aHalf + bHalf + 10) / horizontalSpacing;
+                });
+
             treeLayout(root);
 
             let xMin = Infinity, xMax = -Infinity;
@@ -100,8 +117,8 @@
                 if (d.x > xMax) xMax = d.x;
             });
 
-            const margin = 50;
-            const svgWidth = Math.abs(xMax - xMin) + nodeWidth + margin * 2;
+            const margin = 30;
+            const svgWidth = Math.abs(xMax - xMin) + d3.max(root.descendants(), d => d.data.boxWidth) + margin * 2;
             const svgHeight = (root.height + 1) * verticalSpacing + margin * 2;
 
             const svg = d3.select("#tree-container")
@@ -110,7 +127,7 @@
                 .attr("height", svgHeight);
 
             const containerWidth = document.getElementById("tree-container").offsetWidth;
-const xShift = (containerWidth / 2) - ((xMax + xMin) / 2);
+            const xShift = (containerWidth / 2) - ((xMax + xMin) / 2);
 
             root.each(d => {
                 d.data._x = d.x + xShift;
@@ -122,11 +139,17 @@ const xShift = (containerWidth / 2) - ((xMax + xMin) / 2);
                 .enter()
                 .append("path")
                 .attr("class", "link")
-                .attr("d", d => `
-                    M${d.source.data._x},${d.source.data._y + nodeHeight / 2}
-                    V${d.target.data._y - nodeHeight / 2}
-                    H${d.target.data._x}
-                `);
+                .attr("d", d => {
+                    const sourceY = d.source.data._y + d.source.data.boxHeight / 2;
+                    const targetY = d.target.data._y - d.target.data.boxHeight / 2;
+                    const midY = sourceY + (targetY - sourceY) * 0.4;
+                    return `
+                        M${d.source.data._x},${sourceY}
+                        V${midY}
+                        H${d.target.data._x}
+                        V${targetY}
+                    `;
+                });
 
             const node = svg.selectAll(".node")
                 .data(root.descendants())
@@ -143,10 +166,10 @@ const xShift = (containerWidth / 2) - ((xMax + xMin) / 2);
                 });
 
             node.append("rect")
-                .attr("width", nodeWidth)
-                .attr("height", nodeHeight)
-                .attr("x", -nodeWidth / 2)
-                .attr("y", -nodeHeight / 2)
+                .attr("width", d => d.data.boxWidth)
+                .attr("height", d => d.data.boxHeight)
+                .attr("x", d => -d.data.boxWidth / 2)
+                .attr("y", d => -d.data.boxHeight / 2)
                 .attr("rx", 4);
 
             node.append("text")
@@ -154,152 +177,162 @@ const xShift = (containerWidth / 2) - ((xMax + xMin) / 2);
                 .text(d => d.data.name);
         }
 
-       async function downloadPPT() {
+        async function downloadPPT() {
     if (!familyTree) {
         alert("वंशका मूल व्यक्तिको नाम आवश्यक छ।");
         return;
     }
-
     try {
         const pptx = new PptxGenJS();
-        const slideWidth = 10;  // Width of the slide in inches
-        const slideHeight = 7.5; // Height of the slide in inches
-        const marginX = 1; // Left-right margin in inches
-        const marginY = 0; // Set to 0 to place root at the very top
-        const availableHeight = slideHeight - (2 * marginY); 
-
-        const nodeWidth = 40 / 72; // Convert 40pt to inches
-        const nodeHeight = 40 / 72;
-        const verticalSpacingPoints = 72; // Vertical spacing (72pt = 1 inch per level)
+        const slideWidth = 13.333;
+        const slideHeight = 7.5;
+        const marginX = 0.25;
+        const marginY = 0.25;
+        const availableWidth = slideWidth - 2 * marginX;
+        const availableHeight = slideHeight - 2 * marginY;
 
         const root = d3.hierarchy(familyTree);
-
-        // Calculate available width in points
-        const availableWidthInPoints = (slideWidth - 2 * marginX) * 72;
-
-        // Count nodes at each depth level to determine max nodes in any depth
-        const depthNodeCounts = {};
+        
+        let totalNodes = 0;
+        let maxDepth = 0;
+        let maxNameLength = 0;
         root.each(d => {
-            depthNodeCounts[d.depth] = (depthNodeCounts[d.depth] || 0) + 1;
+            totalNodes++;
+            maxDepth = Math.max(maxDepth, d.depth);
+            maxNameLength = Math.max(maxNameLength, d.data.name.length);
         });
-        const maxNodesInDepth = Math.max(...Object.values(depthNodeCounts), 1);
 
-        // Dynamically calculate horizontal spacing based on max nodes and available width
-        const baseHorizontalSpacing = availableWidthInPoints / (maxNodesInDepth - 1 || 1);
+        // Modified font size calculation:
+        const baseFontSize = Math.max(
+            10, // Increased minimum size for better readability
+            Math.min(14, 18 - Math.log2(totalNodes) - Math.log2(maxNameLength / 6)) // Adjusted coefficients
+        );
 
-        // Generate tree layout with dynamic spacing
-        const treeLayout = d3.tree().nodeSize([baseHorizontalSpacing, verticalSpacingPoints]);
+        // Modified padding calculations:
+        const horizontalPadding = baseFontSize * 0.6; // Reduced padding
+        const verticalPadding = baseFontSize * 0.4;   // Reduced padding
+
+        root.each(d => {
+            const textWidth = measureTextWidth(d.data.name, `${baseFontSize}px sans-serif`) / 96;
+            d.data.boxWidth = textWidth + (horizontalPadding / 36);
+            d.data.boxHeight = (baseFontSize + verticalPadding) / 72;
+        });
+
+        // Modified spacing calculations:
+        const horizontalSpacing = Math.min(60, Math.max(30, 200 / Math.pow(totalNodes, 0.3)));
+        const verticalSpacing = Math.min(40, Math.max(20, 120 / maxDepth));
+
+        const treeLayout = d3.tree()
+            .nodeSize([horizontalSpacing, verticalSpacing])
+            .separation((a, b) => {
+                const aWidth = a.data.boxWidth * 72;
+                const bWidth = b.data.boxWidth * 72;
+                return (aWidth/2 + bWidth/2 + 10) / horizontalSpacing; // Increased gap between nodes
+            });
+
         treeLayout(root);
 
-        // Position root at top center
-        root.data._x = slideWidth / 2;
-        root.data._y = 0;
-
-        // Adjust node positions based on layout
         root.each(d => {
-            d.data._x = (d.x / 72) + (slideWidth / 2);
-            d.data._y = (d.y / 72);
+            d.data._x = d.x / 72;
+            d.data._y = d.y / 72;
         });
 
-        // Calculate vertical span of the tree
-        let minY = Infinity, maxY = -Infinity;
+        let minX = Infinity, maxX = -Infinity, minY = Infinity, maxY = -Infinity;
         root.each(d => {
-            if (d.data._y < minY) minY = d.data._y;
-            if (d.data._y > maxY) maxY = d.data._y;
+            const halfWidth = d.data.boxWidth / 2;
+            minX = Math.min(minX, d.data._x - halfWidth);
+            maxX = Math.max(maxX, d.data._x + halfWidth);
+            minY = Math.min(minY, d.data._y);
+            maxY = Math.max(maxY, d.data._y);
         });
 
+        const treeWidth = maxX - minX;
         const treeHeight = maxY - minY;
-        const numSlides = Math.ceil(treeHeight / availableHeight);
 
-        // Generate each slide
-        for (let i = 0; i < numSlides; i++) {
-            const slideStartY = minY + (i * availableHeight);
-            const slideEndY = slideStartY + availableHeight;
+        const scaleX = availableWidth / (treeWidth || 1);
+        const scaleY = availableHeight / (treeHeight || 1);
+        const scale = Math.min(scaleX, scaleY) * 0.95;
 
-            const nodesInSlide = root.descendants().filter(d => 
-                d.data._y >= slideStartY && d.data._y <= slideEndY
-            );
-            const linksInSlide = root.links().filter(link => 
-                nodesInSlide.includes(link.source) && 
-                nodesInSlide.includes(link.target)
-            );
+        const offsetX = marginX + (availableWidth - treeWidth * scale) / 2;
+        const offsetY = marginY;
 
-            const slide = pptx.addSlide();
+        root.each(d => {
+            d.data._x = offsetX + (d.data._x - minX) * scale;
+            d.data._y = offsetY + d.data._y * scale;
+        });
 
-            // Draw connecting lines
-            linksInSlide.forEach(link => {
-                const source = link.source.data;
-                const target = link.target.data;
-                const sourceY = source._y - slideStartY;
-                const targetY = target._y - slideStartY;
-                const gap = nodeHeight / 2;
+        const slide = pptx.addSlide();
 
-                // Vertical line
-                slide.addShape(pptx.ShapeType.line, {
-                    x: source._x,
-                    y: sourceY + gap,
-                    w: 0,
-                    h: targetY - sourceY - (2 * gap),
-                    line: { color: "000000", width: 1 }
-                });
+        root.links().forEach(link => {
+            const source = link.source.data;
+            const target = link.target.data;
+            const startY = source._y + source.boxHeight / 2;
+            const endY = target._y - target.boxHeight / 2;
+            const midY = (startY + endY) / 2;
 
-                // Horizontal line
-                slide.addShape(pptx.ShapeType.line, {
-                    x: Math.min(source._x, target._x),
-                    y: targetY - gap,
-                    w: Math.abs(target._x - source._x),
-                    h: 0,
-                    line: { color: "000000", width: 1 }
-                });
+            slide.addShape(pptx.ShapeType.line, {
+                x: source._x,
+                y: startY,
+                w: 0,
+                h: (midY - startY),
+                line: { color: "000000", width: 0.5 }
             });
 
-            // Draw nodes
-            nodesInSlide.forEach(d => {
-                const adjustedY = d.data._y - slideStartY;
-                slide.addShape(pptx.ShapeType.rect, {
-                    x: d.data._x - (nodeWidth / 2),
-                    y: adjustedY - (nodeHeight / 2),
-                    w: nodeWidth,
-                    h: nodeHeight,
-                    fill: { color: "FFFFFF" },
-                    line: { color: "000000", width: 1 },
-                    rectRadius: 4
-                });
-
-                slide.addText(d.data.name, {
-                    x: d.data._x - (nodeWidth / 2),
-                    y: adjustedY - (nodeHeight / 2),
-                    w: nodeWidth,
-                    h: nodeHeight,
-                    fontSize: 10,
-                    align: "center",
-                    valign: "middle"
-                });
+            slide.addShape(pptx.ShapeType.line, {
+                x: Math.min(source._x, target._x),
+                y: midY,
+                w: Math.abs(target._x - source._x),
+                h: 0,
+                line: { color: "000000", width: 0.5 }
             });
-        }
+
+            slide.addShape(pptx.ShapeType.line, {
+                x: target._x,
+                y: midY,
+                w: 0,
+                h: (endY - midY),
+                line: { color: "000000", width: 0.5 }
+            });
+        });
+
+        root.descendants().forEach(d => {
+            const halfWidth = d.data.boxWidth / 2;
+            
+            slide.addShape(pptx.ShapeType.rect, {
+                x: d.data._x - halfWidth,
+                y: d.data._y - d.data.boxHeight / 2,
+                w: d.data.boxWidth,
+                h: d.data.boxHeight,
+                fill: { color: "FFFFFF" },
+                line: { color: "000000", width: 0.5 },
+                rectRadius: 2
+            });
+
+            slide.addText(d.data.name, {
+                x: d.data._x - halfWidth,
+                y: d.data._y - d.data.boxHeight / 2,
+                w: d.data.boxWidth,
+                h: d.data.boxHeight,
+                fontSize: baseFontSize,
+                align: "center",
+                valign: "middle",
+                bold: true,
+                fit: "shrink",
+                wrap: false,
+                autoFit: true,
+                minFontSize: 6
+            });
+        });
+
         let fileName = document.getElementById("fileNameInput").value.trim();
-
-        // If the user didn't provide a filename, set a default name
-        if (!fileName) {
-            fileName = "FamilyTree";
-        }
-
-        // Ensure the filename has the correct extension
-        if (!fileName.toLowerCase().endsWith(".pptx")) {
-            fileName += ".pptx";
-        }
-
-        // Generate and save the PPTX file with the user's chosen filename
+        if (!fileName) fileName = "FamilyTree";
+        if (!fileName.toLowerCase().endsWith(".pptx")) fileName += ".pptx";
         await pptx.writeFile({ fileName: fileName });
-
-
     } catch (error) {
         console.error(error);
         alert("Error generating PPTX.");
     }
 }
-
-
     </script>
 </body>
 </html>
